 * Fixed issue #2797: RebaseDlg: Make branch selectors adjust with resized dialog
 * Autocompletion of filenames with umlauts in the commit dialog did not work
 * Fixed issue #2799: Column sizes in "Browse references" dialog are not remembered

= Release 2.2.0 =
Released: 2016-07-02

== Features ==
 * Updated libgit to 2.8.3
 * Fixed issue #2773: Directory renames should be displayed shorter
 * GitStatusList now automatically adjusts the width of columns. This can be disabled by manually sizing it.
 * Fixed issue #2705: TGIT should allow cloning and/or creating from within a non-empty repository
 * Update Scintilla to 3.6.6
 * Fixed issue #2271: "Check For Updates" dialog should be resizable
 * Add drag handler to Repository Browser
 * Fixed issue #2770: Include complete relative path in TortoiseGitMerge

== Bug Fixes ==
 * Fixed issue #2745: TortoiseGit 2.1 crashes on broken git config 
 * Fixed issue #2759: Swapped THEIRS and MINE in cherry-pick conflict dialogs and context menus
 * Fixed issue #2767: The online help of Settings->Git->Remote should explain the "Push Default" checkbox
 * Fixed issue #2772: Comparing with added file might result in comparison with empty file
 * Fixed issue #2774: Pull dialog with Russian LangPack has three defficiencies
 * Fixed issue #2781: SVNRebase Command does not respect closeonend 
 * Fixed issue #2783: "Delete and add to ignore list" does not work when more than 16 files are selected
 * Fixed issue #2740: Order of compared references in revision graph is labelled inverted
 * Fixed issue #2785: Rebase/Cherry-pick with conflict in renamed file fails
 * Fixed issue #2714: TortoiseGitMerge should redraw if font is changed
 * Fixed issue #2756: TortoiseGitMerge: Regex Filter doesn't filter from "Previous diff", "Next diff" operation
 * Fixed issue #2736: stash list/pop missing when refs are packed
 * /revision1: and /revision2: parameters of /command:showcompare are no longer mixed up

= Release 2.1.0 =
Released: 2016-03-26
