@@ -18,6 +18,7 @@ Released: 2016-07-02
 
 == Features ==
  * Updated libgit to 2.8.3
+ * Added stash parameter to SvnRebase command line to handle stash choice for unattended automation.
  * Fixed issue #2773: Directory renames should be displayed shorter
  * GitStatusList now automatically adjusts the width of columns. This can be disabled by manually sizing it.
  * Fixed issue #2705: TGIT should allow cloning and/or creating from within a non-empty repository
